Fixed compiler warnings